<resources>
    <string name="app_name">Balances</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_save_card">Save card</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tv_no_cards">There are no registered cards</string>
    <string name="hint_new_card_name">Card name</string>
    <string name="hint_new_current_balance">Current balance</string>
    <string name="hint_new_card_currency">Currency</string>
    <string name="hint_new_card_type">Card type</string>
    <string name="hint_new_credit_limit">Credit limit</string>
    <string name="hint_new_closing_date">Closing date</string>
    <string name="hint_new_due_date">Due date</string>
    <string name="hint_new_due_date_reminder">Number of days for reminder</string>
    <string name="tv_overview_current_balance">Current balance</string>
    <string name="example_current_balance">$1480.00</string>
    <string name="tv_no_records">There are no records</string>
    <string name="label_new_record_sign">-</string>
    <string name="hint_new_record_amount">Amount</string>
    <string name="hint_new_record_note">Note</string>
    <string name="hint_new_record_date">Date &amp; time</string>
    <string name="hint_new_record_mif">Months of interest-free</string>
    <string name="hint_new_record_currency">Currency</string>
    <string name="label_new_record_date">00/00/0000</string>
    <string name="label_new_record_time">00:00</string>
    <string name="hint_new_record_card">Card</string>
    <string name="hint_new_record_category">Category</string>
    <string name="category_house">Home</string>
    <string name="category_car">Car</string>
    <string name="category_rent">Rent</string>
    <string name="category_food">Food</string>
    <string name="category_extras">Extras</string>
    <string name="action_overview">Overview</string>
    <string name="action_all_records">All records</string>
    <string name="action_scheduled_payments">Scheduled payments</string>
    <string name="action_categories">Categories</string>
</resources>
