<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_dashboard_black_36dp"
            android:title="@string/action_overview" />
        <item
            android:id="@+id/nav_all_records"
            android:icon="@drawable/ic_receipt_black_36dp"
            android:title="@string/action_all_records" />
        <item
            android:id="@+id/nav_scheduled_payments"
            android:icon="@drawable/ic_access_time_black_36dp"
            android:title="@string/action_scheduled_payments" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_local_offer_black_36dp"
            android:title="@string/action_categories" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_share"
                android:title="Send" />
        </menu>
    </item>

</menu>
