<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_form"
        tools:context="com.jesusmacedo.balances.fragments.NewCardDialogFragment">

        <TextView
            android:id="@+id/tv_new_card_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_new_card_name"
            android:textColor="@android:color/darker_gray"/>
        <EditText
            android:id="@+id/et_new_card_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_new_current_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_new_current_balance"
            android:textColor="@android:color/darker_gray"/>
        <EditText
            android:id="@+id/et_new_current_balance"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_new_card_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_new_card_currency"
            android:textColor="@android:color/darker_gray"
            android:layout_marginBottom="@dimen/margin_b_spinners_new_card"/>
        <Spinner
            android:id="@+id/s_new_card_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_new_card_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_new_card_type"
            android:textColor="@android:color/darker_gray"
            android:layout_marginBottom="@dimen/margin_b_spinners_new_card"/>
        <Spinner
            android:id="@+id/s_new_card_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_new_credit_limit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_new_credit_limit"
            android:textColor="@android:color/darker_gray"/>
        <EditText
            android:id="@+id/et_new_credit_limit"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_new_closing_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_new_closing_date"
            android:textColor="@android:color/darker_gray"/>
        <EditText
            android:id="@+id/et_new_closing_date"
            android:inputType="number"
            android:maxLength="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_new_due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_new_due_date"
            android:textColor="@android:color/darker_gray"/>
        <EditText
            android:id="@+id/et_new_due_date"
            android:inputType="number"
            android:maxLength="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_new_due_date_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_new_due_date_reminder"
            android:textColor="@android:color/darker_gray"/>
        <EditText
            android:id="@+id/et_new_due_date_reminder"
            android:inputType="number"
            android:maxLength="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_new_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        app:srcCompat="@drawable/ic_save_white_36dp" />
</RelativeLayout>